Make mvn install work